# CMake

./: CMakeLists.txt
hdr/: controller.h
src/: controller.cpp  main.cpp
